New realization of UserHandler with CallbackDispatcher User registration